--- a/config/darrin.conf
+++ b/config/darrin.conf
@@ -23,6 +23,12 @@ database_user=<username>
 database_password=<hashed_pw>
 database_port=<db_port>
 
+#
+database_master=db-master.prod.app.com
+database_read_1=db-read-1.prod.app.com
+database_read_2=db-read-2.prod.app.com
+database_read_3=db-read-3.prod.app.com
+
 # Log file settings
 [logs]
 app_log=</some/path/app.log>
